--- a/biblio/mylibrary.bib
+++ b/biblio/mylibrary.bib
@@ -13,6 +13,7 @@
 	author = {Guitton, Yann and Nicolè, Florence and Moja, Sandrine and Valot, Nadine and Legrand, Sylvain and Jullien, Frédéric and Legendre, Laurent},
 	urldate = {2015-11-03},
 	date = {2010-02-01},
+	year = {2010},
 	langid = {english},
 	file = {Guitton et al. - 2010 - Differential accumulation of volatile terpene and .pdf:C\:\\Users\\ygu\\Zotero\\storage\\IFRMWB2R\\Guitton et al. - 2010 - Differential accumulation of volatile terpene and .pdf:application/pdf;Snapshot:C\:\\Users\\ygu\\Zotero\\storage\\S65BESRU\\abstract.html:text/html}
 }
@@ -32,6 +33,7 @@
 	author = {Benabdelkader, Tarek and Zitouni, Abdelghani and Guitton, Yann and Jullien, Frédéric and Maitre, Dany and Casabianca, Hervé and Legendre, Laurent and Kameli, Abdelkrim},
 	urldate = {2015-11-03},
 	date = {2011-05-01},
+	year = {2011},
 	langid = {english},
 	keywords = {Lavandula stoechas, Essential oils, Antimicrobial activity, Radical-scavenging activity, Lipid oxidation, Hierarchical clustering analysis ({HCA})},
 	file = {Benabdelkader et al. - 2011 - Essential Oils from Wild Populations of Algerian L.pdf:C\:\\Users\\ygu\\Zotero\\storage\\TN4E2A9Q\\Benabdelkader et al. - 2011 - Essential Oils from Wild Populations of Algerian L.pdf:application/pdf;Snapshot:C\:\\Users\\ygu\\Zotero\\storage\\WSG24ADR\\abstract.html:text/html}
@@ -42,7 +44,7 @@
 	abstract = {Despite the commercial importance of Lavandula angustifolia Mill. and L. x intermedia Emeric ex Loisel floral essential oils ({EOs}), no information is currently available on potential changes in individual volatile organic compound ({VOC}) content during inflorescence development. Calyces were found to be the main sites of {VOC} accumulation. The 20 most abundant {VOCs} could be separated into three sub-groups according to their patterns of change in concentration The three groups of {VOCs} sequentially dominated the global scent bouquet of inflorescences, the transition between the first and second groups occurring around the opening of the first flower of the inflorescence and the one between the second and third groups at the start of seed set. Changes in calyx {VOC} accumulation were linked to the developmental stage of individual flowers. Leaves accumulated a smaller number of {VOCs} which were a subset of those seen in preflowering inflorescences. Their nature and content remained constant during the growing season. Quantitative real time polymerase chain reaction assessments of the expression of two terpene synthase ({TPS}) genes, {LaLIMS} and {LaLINS}, revealed similar trends between their patterns of expression and those of their {VOC} products. Molecular and chemical analyses suggest that changes in {TPS} expression occur during lavender inflorescence development and lead to changes in {EO} composition. Both molecular data and terpene analysis support the findings that changes in biosynthesis of terpene occurred during inflorescence development.},
 	journaltitle = {Physiol Plant. 2010 Feb;138(2):150-63. doi: 10.1111/j.1399-3054.2009.01315.x. Epub 2009 Oct 23.},
 	author = {Guitton, Y. and Nicole, F. and Moja, S. and Valot, N. and Legrand, S. and Jullien, F. and Legendre, L.},
-	date = {2009}
+	year = {2009}
 }
 
 @inproceedings{guitton_aggressive_2015,
@@ -50,6 +52,7 @@
 	title = {Aggressive automated {LC}-{MS}/{MS} data annotation: A {CASMI} experience},
 	author = {Guitton, Yann and Roullier, Catherine and Bertand, Samuel},
 	date = {2015-06},
+	year = {2015},
 	note = {Poster - Published: {RFMF} 2015 (9. édition des Journées Scientifiques du Réseau Francophone de Métabolomique et Fluxomique )}
 }
 
@@ -58,6 +61,7 @@
 	title = {Metabolic profiling and control hypothesis through kinetic accumulation or elimination of secondary metabolites associated with phycotoxins of filter-feeding bivalves},
 	author = {Guitton, Yann and Hervé, Fabienne and Raimbau, Virginie and Déchamps, Lucie and Bardouil, Michèle and Abadie, Eric and Berteaux, Tom and Zendong, Zita and Séchet, Véronique and Palvadeau, Hubert and Amzil, Zouher and Hess, Philipp and Mondeguer, Florence},
 	date = {2015-06},
+	year = {2015},
 	note = {Presentation - Published: {RFMF} 2015 (9. édition des Journées Scientifiques du Réseau Francophone de Métabolomique et Fluxomique )}
 }
 
@@ -66,6 +70,7 @@
 	title = {L’annotation automatisée des analyses métabolomiques en {LC}-{MS} : un challenge relevé par la plate-forme Corsaire},
 	author = {Guitton, Yann and Rivet, Laurent},
 	date = {2015-03},
+	year = {2015},
 	note = {Presentation - Published: Gen2Bio}
 }
 
@@ -74,6 +79,7 @@
 	url = {https://hal.archives-ouvertes.fr/hal-01214152},
 	author = {Petera, Mélanie and Le Corguille, Gildas and Landi, Marion and Monsoor, Misharl and {TREMBLAY} {FRANCO}, Marie and Duperier, Christophe and Martin, Jean-François and Jacob, Daniel and Guitton, Yann and Lefebvre, Marie and Pujos-Guillot, Estelle and Giacomoni, Franck and Thévenot, Etienne and Caron, Christophe},
 	date = {2015-07},
+	year = {2015},
 	note = {Poster - Paper reference: Giacomoni et al. (2014) Workﬂow4Metabolomics: A collaborative research infrastructure for computational metabolomics. Bioinformatics http://dx.doi.org/10.1093/bioinformatics/btu813 Published: {JOBIM} 2015 (16. édition des Journées Ouvertes en Biologie, Informatique et Mathématiques )}
 }
 
@@ -82,6 +88,7 @@
 	title = {Workflow4metabolomics 2.1 A collaborative research infrastructure for computational metabolomics.},
 	author = {Le Corguille, Gildas and Monsoor, Misharl and Landi, Marion and Petera, Mélanie and Vacquie, Camille and Tremblay Franco, Marie and Canelet, Cécile and Martin, Jean-François and Pericard, Pierre and Duperier, Christophe and Goulitquer, Sophie and Guitton, Yann and Thevenot, Etienne and Giacomoni, Franck and Caron, Christophe},
 	date = {2015-11},
+	year = {2015},
 	note = {Poster Published: Idealg Forum}
 }
 
@@ -102,6 +109,7 @@ Supplementary information: Additional information, self-guided tutorials and dem
 	author = {Nicolè, Florence and Guitton, Yann and Courtois, Elodie A. and Moja, Sandrine and Legendre, Laurent and Hossaert-{McKey}, Martine},
 	urldate = {2016-07-26},
 	date = {2012-01-09},
+	year = {2012},
 	langid = {english},
 	pmid = {22782550},
 	file = {Nicolè et al. - 2012 - MSeasy unsupervised and untargeted GC-MS data pro.pdf:C\:\\Users\\ygu\\Zotero\\storage\\9ADQUTMK\\Nicolè et al. - 2012 - MSeasy unsupervised and untargeted GC-MS data pro.pdf:application/pdf;Snapshot:C\:\\Users\\ygu\\Zotero\\storage\\47FV7CXC\\2278.html:text/html}
@@ -116,6 +124,7 @@ Supplementary information: Additional information, self-guided tutorials and dem
 	author = {Mondeguer, Florence and Antignac, Jean-Philippe and Guitton, Yann and Monteau, Fabrice and Le Borgne, Sabrina and Hess, Philipp},
 	urldate = {2016-07-26},
 	date = {2012},
+	year = {2012},
 	file = {Mondeguer et al. - 2012 - Nouvelle stratégie de caractérisation non ciblée d.pdf:C\:\\Users\\ygu\\Zotero\\storage\\WIFSD3S4\\Mondeguer et al. - 2012 - Nouvelle stratégie de caractérisation non ciblée d.pdf:application/pdf}
 }
 
@@ -131,6 +140,7 @@ Supplementary information: Additional information, self-guided tutorials and dem
 	author = {Geiger, M. and Guitton, Y. and Vansteelandt, M. and Kerzaon, I. and Blanchet, E. and Robiou du Pont, T. and Frisvad, J.C. and Hess, P. and Pouchus, Y.F. and Grovel, O.},
 	urldate = {2016-07-26},
 	date = {2013-11},
+	year = {2013},
 	langid = {english},
 	file = {Cytotoxicity and mycotoxin production of shellfish-derived Penicillium spp., a risk for shellfish consumers - 25523.pdf:C\:\\Users\\ygu\\Zotero\\storage\\TMJ9QG6A\\25523.pdf:application/pdf}
 }
@@ -147,6 +157,7 @@ Supplementary information: Additional information, self-guided tutorials and dem
 	author = {Jullien, Frédéric and Moja, Sandrine and Bony, Aurélie and Legrand, Sylvain and Petit, Cécile and Benabdelkader, Tarek and Poirot, Kévin and Fiorucci, Sébastien and Guitton, Yann and Nicolè, Florence and Baudino, Sylvie and Magnard, Jean-Louis},
 	urldate = {2016-07-26},
 	date = {2014-01},
+	year = {2014},
 	langid = {english},
 	file = {Jullien et al. - 2014 - Isolation and functional characterization of a τ-c.pdf:C\:\\Users\\ygu\\Zotero\\storage\\P9ARKTQU\\Jullien et al. - 2014 - Isolation and functional characterization of a τ-c.pdf:application/pdf}
 }
@@ -164,6 +175,7 @@ Supplementary information: Additional information, self-guided tutorials and dem
 	author = {Geiger, Marie and Desanglois, Gwenaëlle and Hogeveen, Kevin and Fessard, Valérie and Leprêtre, Thomas and Mondeguer, Florence and Guitton, Yann and Hervé, Fabienne and Séchet, Véronique and Grovel, Olivier and Pouchus, Yves-François and Hess, Philipp},
 	urldate = {2016-07-26},
 	date = {2013-09-02},
+	year = {2013},
 	langid = {english},
 	keywords = {dereplication, cyclic imine, {HRMS}, bioactivity, pinnatoxins},
 	file = {Geiger et al. - 2013 - Cytotoxicity, Fractionation and Dereplication of E.pdf:C\:\\Users\\ygu\\Zotero\\storage\\8DK4KWG4\\Geiger et al. - 2013 - Cytotoxicity, Fractionation and Dereplication of E.pdf:application/pdf;Snapshot:C\:\\Users\\ygu\\Zotero\\storage\\BAK7P6DR\\htm.html:text/html}
@@ -176,6 +188,7 @@ Supplementary information: Additional information, self-guided tutorials and dem
 	author = {Mondeguer, Florence and Antignac, Jean-Philippe and Guitton, Yann and Monteau, Fabrice and Le Borgne, Sabrina and Hess, Philipp},
 	urldate = {2016-07-26},
 	date = {2013},
+	year = {2013},
 	file = {Mondeguer et al. - 2013 - Stratégie de mesure non ciblée de type métabolomiq.pdf:C\:\\Users\\ygu\\Zotero\\storage\\GPJT9C7N\\Mondeguer et al. - 2013 - Stratégie de mesure non ciblée de type métabolomiq.pdf:application/pdf}
 }
 
@@ -192,6 +205,7 @@ Supplementary information: Additional information, self-guided tutorials and dem
 	author = {Guitton, Yann and Nicolè, Florence and Moja, Sandrine and Benabdelkader, Tarek and Valot, Nadine and Legrand, Sylvain and Jullien, Frédéric and Legendre, Laurent},
 	urldate = {2016-07-26},
 	date = {2010-06},
+	year = {2010},
 	langid = {english},
 	file = {Guitton et al. - 2010 - Lavender inflorescence A model to study regulatio.pdf:C\:\\Users\\ygu\\Zotero\\storage\\3MHUBGDV\\Guitton et al. - 2010 - Lavender inflorescence A model to study regulatio.pdf:application/pdf}
 }
@@ -203,6 +217,7 @@ Supplementary information: Additional information, self-guided tutorials and dem
 	author = {Guitton, Yann and Mondeguer, Florence and Nicolau, Elodie and Royer, F and Hilbert, Jean-Louis and Fournier, Isabelle and Wisztorski, Maxence},
 	urldate = {2016-07-26},
 	date = {2012},
+	year = {2012},
 	file = {Guitton et al. - Maldi Mass Spectrometry Imaging Applied to small m.pdf:C\:\\Users\\ygu\\Zotero\\storage\\9UGZCKNU\\Guitton et al. - Maldi Mass Spectrometry Imaging Applied to small m.pdf:application/pdf}
 }
 
@@ -215,6 +230,7 @@ Supplementary information: Additional information, self-guided tutorials and dem
 	author = {Guitton, Yann},
 	urldate = {2016-07-26},
 	date = {2010},
+	year = {2010},
 	file = {Diversité des composés terpéniques volatils au sein du genre Lavandula \: aspects évolutifs et physiologiques - 2010_GUITTON_INTERNET.pdf:C\:\\Users\\ygu\\Zotero\\storage\\VDQBA6HQ\\2010_GUITTON_INTERNET.pdf:application/pdf}
 }
 
@@ -228,6 +244,7 @@ Supplementary information: Additional information, self-guided tutorials and dem
 	author = {Moja, S. and Guitton, Y. and Nicolè, F. and Legendre, L. and Pasquier, B. and Upson, T. and Jullien, F.},
 	urldate = {2016-07-26},
 	date = {2015-03-09},
+	year = {2015},
 	langid = {english},
 	file = {Moja et al. - 2015 - Genome size and plastid trnK-matK markers give new.pdf:C\:\\Users\\ygu\\Zotero\\storage\\7AA7IGF3\\Moja et al. - 2015 - Genome size and plastid trnK-matK markers give new.pdf:application/pdf}
 }
@@ -246,6 +263,7 @@ Supplementary information: Additional information, self-guided tutorials and dem
 	author = {Roullier, Catherine and Bertrand, Samuel and Blanchet, Elodie and Peigné, Mathilde and Robiou du Pont, Thibaut and Guitton, Yann and Pouchus, Yves François and Grovel, Olivier},
 	urldate = {2016-08-17},
 	date = {2016-05-21},
+	year = {2016},
 	langid = {english},
 	keywords = {Untargeted metabolomics, biosynthesis, griseofulvin, kinetics, {LC}-{MS}, marine fungi, natural products, time-scale metabolomics},
 	file = {Roullier et al. - 2016 - Time Dependency of Chemodiversity and Biosynthetic.pdf:C\:\\Users\\ygu\\Zotero\\storage\\A49RHP7X\\Roullier et al. - 2016 - Time Dependency of Chemodiversity and Biosynthetic.pdf:application/pdf;Snapshot:C\:\\Users\\ygu\\Zotero\\storage\\UD4FFW3X\\103.html:text/html}
@@ -263,6 +281,7 @@ Supplementary information: Additional information, self-guided tutorials and dem
 	author = {Dang, Bach Tai and Guitton, Yann and Freuze, Ingrid and Grovel, Olivier and Litaudon, Marc and Richomme, Pascal and Séraphin, Denis and Derbré, Séverine},
 	urldate = {2016-08-17},
 	date = {2015-03},
+	year = {2015},
 	keywords = {dereplication, High performance liquid chromatography, Electrospray ionization tandem mass spectrometry, Mammea coumarin, Mammea neurophylla},
 	file = {Dang et al. - 2015 - Dereplication of Mammea neurophylla metabolites to.pdf:C\:\\Users\\ygu\\Zotero\\storage\\EVP32XFT\\Dang et al. - 2015 - Dereplication of Mammea neurophylla metabolites to.pdf:application/pdf;ScienceDirect Snapshot:C\:\\Users\\ygu\\Zotero\\storage\\KETK54NX\\S1874390014002328.html:text/html}
 }
@@ -279,6 +298,7 @@ Supplementary information: Additional information, self-guided tutorials and dem
 	author = {Benabdelkader, Tarek and Guitton, Yann and Pasquier, Bernard and Magnard, Jean Louis and Jullien, Frédéric and Kameli, Abdelkrim and Legendre, Laurent},
 	urldate = {2016-08-17},
 	date = {2015-01},
+	year = {2015},
 	langid = {english},
 	file = {benabdelkader2015.pdf:C\:\\Users\\ygu\\Zotero\\storage\\5EDXDKS6\\benabdelkader2015.pdf:application/pdf}
 }
@@ -292,12 +312,14 @@ Supplementary information: Additional information, self-guided tutorials and dem
 	author = {Roullier, Catherine and Guitton, Yann and Valery, Marine and Amand, Séverine and Prado, Soizic and Robiou du Pont, Thibaut and Grovel, Olivier and Pouchus, Yves François},
 	urldate = {2016-09-02},
 	date = {2016-08-18},
+	year = {2016},
 	langid = {english},
 	file = {Roullier et al. - 2016 - Automated detection of natural halogenated compoun.pdf:C\:\\Users\\ygu\\Zotero\\storage\\ZXHMSV6N\\Roullier et al. - 2016 - Automated detection of natural halogenated compoun.pdf:application/pdf}
 }
 
 @unpublished{_cariou_????,
 	title = {Cariou R, Guitton Y, Léon A, Hurel J, Omer E, Dervilly-Pinel G and Le Bizec B. Screening halogenated environmental contaminants in biota based on isotopic pattern and mass defect provided by high resolution {MS} profiling. 21st International Mass Spectrometry Conference ({IMSC} 2016), Toronto, Canada, 22–26 August 2016. Cariou R, Guitton Y, Léon A, Hurel J, Omer E, Dervilly-Pinel G and Le Bizec B. Screening halogenated environmental contaminants in biota based on isotopic pattern and mass defect provided by {HRMS} profiling. 36th International Symposium on Halogenated Environmental Organic Pollutants and {POPs}, Florence, Italy, 28th August – 02nd September 2016.}
+	year = {2016},
 }
 
 @article{marchand_multidimensional_2017,
@@ -311,6 +333,7 @@ Supplementary information: Additional information, self-guided tutorials and dem
 	author = {Marchand, Jérémy and Martineau, Estelle and Guitton, Yann and Dervilly-Pinel, Gaud and Giraudeau, Patrick},
 	urldate = {2016-09-27},
 	date = {2017-02},
+	year = {2017},
 	langid = {english},
 	file = {Marchand et al. - 2017 - Multidimensional NMR approaches towards highly res.pdf:C\:\\Users\\ygu\\Zotero\\storage\\S27949UG\\Marchand et al. - 2017 - Multidimensional NMR approaches towards highly res.pdf:application/pdf}
 }
@@ -451,6 +474,7 @@ dissected
 	eventtitle = {The nitrogen nutrition of plants},
 	author = {Dechaumet, Sylvain and Le Caherec, F. and Leport, L. and Bererdocco, S. and Rolland, S. and Marnet, N. and Jonard, Catherine and Guitton, Yann and Bouchereau, Alain and Albert, B. and Faes, P. and Deleu, C.},
 	date = {2016-08-22},
+	year = {2016},
 	file = {Dechaumet et al. - 2016 - Metabolic siganture of oilseed rape source and sin.pdf:C\:\\Users\\ygu\\Zotero\\storage\\N5QNP87S\\Dechaumet et al. - 2016 - Metabolic siganture of oilseed rape source and sin.pdf:application/pdf}
 }
 
@@ -460,6 +484,7 @@ dissected
 	eventtitle = {10ème {JOurnées} scientifique du {RFMF}},
 	author = {Dechaumet, Sylvain and Le Caherec, F. and Leport, L. and Bererdocco, S. and Rolland, S. and Marnet, N. and Jonard, Catherine and Guitton, Yann and Bouchereau, Alain},
 	date = {2016-06-31},
+	year = {2016},
 	note = {{POster} conges {RFMF} 2016},
 	file = {Dechaumet et al. - 2016 - Leaf ageing in oilseed rape, a qualitative and qua.pdf:C\:\\Users\\ygu\\Zotero\\storage\\XPAMN5SG\\Dechaumet et al. - 2016 - Leaf ageing in oilseed rape, a qualitative and qua.pdf:application/pdf}
 }
@@ -477,6 +502,7 @@ dissected
 	author = {Peng, Tao and Royer, Anne-Lise and Guitton, Yann and Bizec, Bruno Le and Dervilly-Pinel, Gaud},
 	urldate = {2017-05-16},
 	date = {2017-06-01},
+	year = {2017},
 	langid = {english},
 	file = {Peng et al. - 2017 - Serum-based metabolomics characterization of pigs .pdf:C\:\\Users\\ygu\\Zotero\\storage\\JASEEAH9\\Peng et al. - 2017 - Serum-based metabolomics characterization of pigs .pdf:application/pdf;Snapshot:C\:\\Users\\ygu\\Zotero\\storage\\MXKRBZIU\\10.html:text/html}
 }
@@ -490,6 +516,7 @@ dissected
 	author = {Guitton, Yann and Tremblay-Franco, Marie and Le Corguillé, Gildas and Martin, Jean-François and Pétéra, Mélanie and Roger-Mele, Pierrick and Delabrière, Alexis and Goulitquer, Sophie and Monsoor, Misharl and Duperier, Christophe and Canlet, Cécile and Servien, Rémi and Tardivel, Patrick and Caron, Christophe and Giacomoni, Franck and Thévenot, Etienne A.},
 	urldate = {2017-07-12},
 	date = {2017-07},
+	year = {2017},
 	langid = {english},
 	keywords = {{\textgreater}Workflow4Metabolomics, +Galactic, +{IsGalaxy}},
 	file = {Create, run, share, publish, and reference your LC–MS, FIA–MS, GC–MS, and NMR data analysis workflows with the Workflow4Metabolomics 3.0 Galaxy online infrastructure for metabolomics - 1-s2.0-S1357272517301577-main.pdf:C\:\\Users\\ygu\\Zotero\\storage\\6RBJW4DJ\\1-s2.0-S1357272517301577-main.pdf:application/pdf;Create, run, share, publish, and reference your LC–MS, FIA–MS, GC–MS, and NMR data analysis workflows with the Workflow4Metabolomics 3.0 Galaxy online infrastructure for metabolomics - 1-s2.0-S1357272517301577-main.pdf:C\:\\Users\\ygu\\Zotero\\storage\\SMMQP5I8\\1-s2.0-S1357272517301577-main.pdf:application/pdf;Create, run, share, publish, and reference your LC–MS, FIA–MS, GC–MS, and NMR data analysis workflows with Workflow4Metabolomics 3.0, the Galaxy online infrastructure for metabolomics - 1-s2.0-S1357272517301577-main.pdf:C\:\\Users\\ygu\\Zotero\\storage\\GNXZ3D4V\\1-s2.0-S1357272517301577-main.pdf:application/pdf;Guitton et al. - 2017 - Create, run, share, publish, and reference your LC.pdf:C\:\\Users\\ygu\\Zotero\\storage\\TCI34599\\Guitton et al. - 2017 - Create, run, share, publish, and reference your LC.pdf:application/pdf}
@@ -506,6 +533,7 @@ dissected
 	author = {Fernand, Maherizo Gedice and Roullier, Catherine and Guitton, Yann and Lalande, Julie and Lacoste, Sandrine and Dupont, Joëlle and Ruiz, Nicolas and Pouchus, Yves François and Raheriniaina, Christian and Ranaivoson, Eulalie},
 	urldate = {2017-07-20},
 	date = {2017-10},
+	year = {2017},
 	langid = {english},
 	file = {Fernand et al. - 2017 - Fungi isolated from Madagascar shrimps - investiga.pdf:C\:\\Users\\ygu\\Zotero\\storage\\VJF9T4J4\\Fernand et al. - 2017 - Fungi isolated from Madagascar shrimps - investiga.pdf:application/pdf}
 }
@@ -523,6 +551,7 @@ dissected
 	author = {Cesbron, N. and Royer, A.-L. and Guitton, Y. and Sydor, A. and Bizec, B. Le and Dervilly-Pinel, G.},
 	urldate = {2017-09-12},
 	date = {2017-08-01},
+	year = {2017},
 	langid = {english},
 	file = {MEBO-S-17-00080-1.pdf:C\:\\Users\\ygu\\Zotero\\storage\\D878U7DC\\MEBO-S-17-00080-1.pdf:application/pdf;Snapshot:C\:\\Users\\ygu\\Zotero\\storage\\326ZIMAM\\s11306-017-1233-8.html:text/html}
 }
@@ -541,6 +570,7 @@ dissected
 	author = {Bertrand, Samuel and Guitton, Yann and Roullier, Catherine},
 	urldate = {2017-09-25},
 	date = {2017-09},
+	year = {2017},
 	keywords = {Annotation, dereplication, natural products, Automated method, {CASMI} contest, {LC}–{HRMS}},
 	file = {Bertrand et al. - 2017 - Successes and pitfalls in automated dereplication .pdf:C\:\\Users\\ygu\\Zotero\\storage\\566URA59\\Bertrand et al. - 2017 - Successes and pitfalls in automated dereplication .pdf:application/pdf;ScienceDirect Snapshot:C\:\\Users\\ygu\\Zotero\\storage\\EMJ5526R\\S1874390016303974.html:text/html}
 }
